--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,1 +1,10 @@
+/AirlineRegistration.class
+/Calculator.class
+/Joke.class
+/MorningZombie.class
+/Riddler.class
 /dizzyTortoise.class
+/sketch_160508b/
+/TortoiseInSpace.class
+/Starz.class
+/NasaCountdown.class
