--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -7,6 +7,7 @@
 /MorningZombie.class
 /NasaCountdown.class
 /NumberSorter.class
+/ObidientTortoise.class
 /Riddler.class
 /SafeCracker.class
 /Starz.class
@@ -14,4 +15,5 @@
 /dizzyTortoise.class
 /sketch_160508b/
 /xGeeks.class
-/ObidientTortoise.class
+/AreYouHappy.class
+/ZorkGame.class
