--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,5 +1,6 @@
 /AirlineRegistration.class
 /AnimalFarm.class
+/AreYouHappy.class
 /BirthdayReminder.class
 /Calculator.class
 /Code4Life.class
@@ -12,8 +13,8 @@
 /SafeCracker.class
 /Starz.class
 /TortoiseInSpace.class
+/ZorkGame.class
 /dizzyTortoise.class
 /sketch_160508b/
 /xGeeks.class
-/AreYouHappy.class
-/ZorkGame.class
+/Prime.class
